--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "devicon": "^2.15.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
