--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "devicon": "^2.15.1",
+    "typed.js": "^2.1.0",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-typed-js": "^0.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
