--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "devicon": "^2.15.1",
+    "gsap": "^3.12.5",
     "typed.js": "^2.1.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
