--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gsap": "^3.12.5",
     "typed.js": "^2.1.0",
     "vanilla-tilt": "^1.8.1",
+    "vanilla-tilt-vue": "^0.1.3",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
     "vue-typed-js": "^0.1.2"
