--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "devicon": "^2.15.1",
     "gsap": "^3.12.5",
     "typed.js": "^2.1.0",
