--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.29",
     "@types/react": "^18.2.66",
     "@types/react-anchor-link-smooth-scroll": "^1.0.5",
     "@types/react-dom": "^18.2.22",
