--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "framer-motion": "^11.1.7",
+    "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-animate-on-scroll": "^2.1.9",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "react-router-hash-link": "^2.4.3",
@@ -24,6 +27,7 @@
   "devDependencies": {
     "@types/jquery": "^3.5.29",
     "@types/react": "^18.2.66",
+    "@types/react-animate-on-scroll": "^2.1.8",
     "@types/react-dom": "^18.2.22",
     "@types/react-router-hash-link": "^2.4.9",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
