--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && rm -rf build && yarn build-sass",
-    "build-sass": "sass --output-style expanded src/index.scss ./build/index.css  && yarn  build-autoprefix",
+    "build-sass": "sass src/index.sass ./build/index.css",
     "build-autoprefix": "postcss --use autoprefixer --map --output ./build/index.css ./build/index.css",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -25,7 +25,6 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "react-router-hash-link": "^2.4.3",
-    "sass": "^1.77.0",
     "typed.js": "^2.1.0",
     "vi": "^1.0.0"
   },
@@ -44,6 +43,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "gh-pages": "^6.1.1",
     "postcss": "^8.4.38",
+    "sass": "^1.77.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
