Revert "chore(deps): changed homepage path"
This reverts commit 9533770c5d0d88f53da0c9eac84b4b4f68c1220f.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "linusehle-portfolio",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://linusehle.github.io/linusehle-portfolio",
+  "homepage": "https://github.com/linusehle/linusehle-portfolio",
   "type": "module",
   "scripts": {
     "dev": "vite",
