--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://linusehle.github.io/linusehle-portfolio",
   "scripts": {
     "dev": "vite",
     "predeploy" : "npm run build",
